fix: fixed bibliography and citations

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -64,19 +64,6 @@
   bibsource    = {dblp computer science bibliography, https://dblp.org}
 }
 
-@book{DBLP:books/daglib/0015650,
-  author       = {Kent L. Beck and
-                  Cynthia Andres},
-  title        = {Extreme programming explained - embrace change, Second Edition},
-  series       = {The {XP} series},
-  publisher    = {Addison-Wesley},
-  year         = {2005},
-  isbn         = {978-0-321-27865-4},
-  timestamp    = {Mon, 15 Jul 2019 16:26:46 +0200},
-  biburl       = {https://dblp.org/rec/books/daglib/0015650.bib},
-  bibsource    = {dblp computer science bibliography, https://dblp.org}
-}
-
 @article{DBLP:journals/csur/MernikHS05,
   author       = {Marjan Mernik and
                   Jan Heering and
@@ -130,50 +117,21 @@
   bibsource    = {dblp computer science bibliography, https://dblp.org}
 }
 
-@inproceedings{DBLP:conf/usenix/LawallM18,
-  author       = {Julia Lawall and
-                  Gilles Muller},
-  editor       = {Haryadi S. Gunawi and
-                  Benjamin C. Reed},
-  title        = {Coccinelle: 10 Years of Automated Evolution in the Linux Kernel},
-  booktitle    = {Proceedings of the 2018 {USENIX} Annual Technical Conference, {USENIX}
-                  {ATC} 2018, Boston, MA, USA, July 11-13, 2018},
-  pages        = {601--614},
-  publisher    = {{USENIX} Association},
-  year         = {2018},
-  url          = {https://www.usenix.org/conference/atc18/presentation/lawall},
-  timestamp    = {Tue, 16 Jul 2024 09:12:32 +0200},
-  biburl       = {https://dblp.org/rec/conf/usenix/LawallM18.bib},
+@article{DBLP:journals/computer/BealPV15,
+  author       = {Jacob Beal and
+                  Danilo Pianini and
+                  Mirko Viroli},
+  title        = {Aggregate Programming for the Internet of Things},
+  journal      = {Computer},
+  volume       = {48},
+  number       = {9},
+  pages        = {22--30},
+  year         = {2015},
+  url          = {https://doi.org/10.1109/MC.2015.261},
+  doi          = {10.1109/MC.2015.261},
+  timestamp    = {Wed, 12 Aug 2020 10:31:37 +0200},
+  biburl       = {https://dblp.org/rec/journals/computer/BealPV15.bib},
   bibsource    = {dblp computer science bibliography, https://dblp.org}
-}
-
-@misc{JetBrains:KotlinCompilerPlugin,
-  author = {JetBrains},
-  title = {Writing Your First Kotlin Compiler Plugin},
-  howpublished = {\url{https://resources.jetbrains.com/storage/products/kotlinconf2018/slides/5_Writing%20Your%20First%20Kotlin%20Compiler%20Plugin.pdf}},
-  note = {Accessed: 2025-01-24}
-}
-
-@article{Beal2015,
-  title = {Aggregate Programming for the Internet of Things},
-  volume = {48},
-  ISSN = {0018-9162},
-  url = {http://dx.doi.org/10.1109/MC.2015.261},
-  DOI = {10.1109/mc.2015.261},
-  number = {9},
-  journal = {Computer},
-  publisher = {Institute of Electrical and Electronics Engineers (IEEE)},
-  author = {Beal,  Jacob and Pianini,  Danilo and Viroli,  Mirko},
-  year = {2015},
-  month = sep,
-  pages = {22–30}
-}
-
-@inproceedings{Beal2014TowardsAU,
-  title={Towards a Unified Model of Spatial Computing},
-  author={Jacob Beal and Ferruccio Damiani},
-  year={2014},
-  url={https://api.semanticscholar.org/CorpusID:204792591}
 }
 
 @article{DBLP:journals/jlap/ViroliBDACP19,
@@ -194,19 +152,23 @@
   bibsource    = {dblp computer science bibliography, https://dblp.org}
 }
 
-@article{Viroli2018,
-  title = {Engineering Resilient Collective Adaptive Systems by Self-Stabilisation},
-  volume = {28},
-  ISSN = {1558-1195},
-  url = {http://dx.doi.org/10.1145/3177774},
-  DOI = {10.1145/3177774},
-  number = {2},
-  journal = {ACM Transactions on Modeling and Computer Simulation},
-  publisher = {Association for Computing Machinery (ACM)},
-  author = {Viroli,  Mirko and Audrito,  Giorgio and Beal,  Jacob and Damiani,  Ferruccio and Pianini,  Danilo},
-  year = {2018},
-  month = mar,
-  pages = {1–28}
+@article{DBLP:journals/tomacs/ViroliABDP18,
+  author       = {Mirko Viroli and
+                  Giorgio Audrito and
+                  Jacob Beal and
+                  Ferruccio Damiani and
+                  Danilo Pianini},
+  title        = {Engineering Resilient Collective Adaptive Systems by Self-Stabilisation},
+  journal      = {{ACM} Trans. Model. Comput. Simul.},
+  volume       = {28},
+  number       = {2},
+  pages        = {16:1--16:28},
+  year         = {2018},
+  url          = {https://doi.org/10.1145/3177774},
+  doi          = {10.1145/3177774},
+  timestamp    = {Sat, 08 Jan 2022 02:24:15 +0100},
+  biburl       = {https://dblp.org/rec/journals/tomacs/ViroliABDP18.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
 }
 
 @inproceedings{DBLP:conf/saso/PianiniBV17,
@@ -325,11 +287,3 @@
   biburl       = {https://dblp.org/rec/conf/forte/DamianiVPB15.bib},
   bibsource    = {dblp computer science bibliography, https://dblp.org}
 }
-
-@book{moskala2023,
-  title     = "Advanced Kotlin (Kotlin for Developers)",
-  author    = "Marcin Moskala",
-  year      = 2023,
-  publisher = "978-83-966847-4-5",
-}
-
