--- a/thesis-main.tex
+++ b/thesis-main.tex
@@ -2443,16 +2443,15 @@ turning them into a powerful asset rather than a niche solution.
 \bibliography{bibliography}
 
 \begin{acknowledgements}
-I would like to express my sincere gratitude to my advisor, Prof. Danilo
-Pianini, for guiding and supporting me throughout this work. I especially thank
-him for proposing a thesis topic that aligned as closely as possible with my
-interests and for helping me learn many new things along the way. I also extend
-my thanks to my co-advisors, Nicolas Farabegoli and Angela Cortecchia, for their
-helpful discussions and for proposing interesting ideas that contributed to the
-project.
+I would like to sincerely thank my advisor, Prof. Danilo Pianini, for guiding
+and supporting me throughout this work. I especially thank him for proposing a
+thesis topic that aligned as closely as possible with my interests and for
+helping me learn many new things along the way. I also extend my thanks to my
+co-advisors, Nicolas Farabegoli and Angela Cortecchia, for their helpful
+discussions and for proposing interesting ideas that contributed to the project.
 
-Finally, I am truly grateful to my family for their constant support
-throughout my master’s degree. Their encouragement has been essential in
+Finally, I am very grateful to my family for their constant support
+throughout my master degree. Their encouragement has been essential in
 completing this journey.
 \end{acknowledgements}
 
