refactor: changed acknowledgements

--- a/thesis-main.tex
+++ b/thesis-main.tex
@@ -2450,7 +2450,7 @@ helping me learn many new things along the way. I also extend my thanks to my
 co-advisors, Nicolas Farabegoli and Angela Cortecchia, for their helpful
 discussions and for proposing interesting ideas that contributed to the project.
 
-Finally, I am very grateful to my family for their constant support
+Finally, I am very grateful to my friends and family for their constant support
 throughout my master degree. Their encouragement has been essential in
 completing this journey.
 \end{acknowledgements}
